--- a/style.css
+++ b/style.css
@@ -108,6 +108,29 @@ button:disabled:hover{
     color:red;
 }
 
+.terminal-btn{
+    width:1.5rem;
+    height:1.5rem;
+    display: flex;
+    align-items: center; justify-content: center;
+    margin: 0 0.15rem 0 0.15rem;
+
+    backdrop-filter: blur(3r);
+
+    border: none;
+    border-radius: 0.3rem;
+    background-color: #2d3031e2;
+}
+.terminal-btn:hover{
+    background-color: #798287e2;
+}
+#terminal-ctrl{
+    opacity: 0;
+    transition: all 230ms cubic-bezier(0.260, 0.050, 0.250, 1.000); /* custom */
+}#terminal-ctrl:hover{
+    opacity: 1;
+}
+
 .default-upload{
     width:2.5rem;
     transition: all 400ms cubic-bezier(0.665, 0.005, 0.080, 1.000); /* custom */
@@ -523,7 +546,7 @@ hr{
     box-shadow: -0.1rem 0.1rem 20px 5px rgba(0, 0, 0, 0.576), 0rem 0rem 10px 2px rgba(0, 0, 0, 0.151);
     border: 1.5px solid;
     border-color: #424242;
-    transition: all 300ms cubic-bezier(0.355, 0.010, 0.200, 1.010); /* custom */
+    transition: opacity 300ms cubic-bezier(0.355, 0.010, 0.200, 1.010); /* custom */
 }
 
 .node-dragging{
