--- a/style.css
+++ b/style.css
@@ -853,7 +853,7 @@ input[type=number]:focus{
  /* The container must be positioned relative: */
 
 select{
-    background:url("selectarrow.svg");
+    background:url("img/resources/selectarrow.svg");
     border: 1px solid rgba(255, 255, 255, 0.349);
     color:white;
     border-radius: 100vh;
