--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
     --h3-size: 1.5rem;
     --h4-size: 1.25rem;
     --h5-size: 1rem;
+
+    --default-button-height: 2.25rem;
 }
 
 .logo{
@@ -44,7 +46,7 @@ button, .buttonlike{
     justify-content: center;
 
     padding: 0rem 0.75rem 0rem 0.75rem;
-    height:2.25rem;
+    height:var(--default-button-height);
     margin:0.3rem;
     background-color: transparent;
     z-index: 10;
@@ -52,6 +54,7 @@ button, .buttonlike{
     white-space: nowrap;
 
     width:80%;
+    min-width: fit-content;
 
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -159,9 +162,9 @@ p > button{
 }
 
 .default-upload{
-    min-width:2.25rem;
-    width:2.25rem;
-    height:2.25rem;
+    min-width:var(--default-button-height);
+    width:var(--default-button-height);
+    height:var(--default-button-height);
     transition: all 400ms cubic-bezier(0.665, 0.005, 0.080, 1.000); /* custom */
     display: flex;
     flex-direction: row;
@@ -173,10 +176,12 @@ p > button{
 }
 .default-upload:hover{
     width:27rem;
+    min-width:27rem;
     transition-delay: 200ms;
 }
 .default-upload-300:hover{
     width:9rem;
+    min-width:9rem;
     transition-delay: 200ms;
 }
 
@@ -187,9 +192,9 @@ p > button{
     transform: rotate(90deg) translate(0rem, 0.0775rem) !important;
     -moz-transform:rotate(90deg) translate(0, 0) !important;
     
-    min-width:2.25rem;
-    width:2.25rem;
-    height:2.25rem;
+    min-width:var(--default-button-height);
+    width:var(--default-button-height);
+    height:var(--default-button-height);
 
     display: flex;
     justify-content: center;
@@ -228,6 +233,7 @@ p > button{
     padding:0;
     border-radius: 0.4rem;
     width: 2.4rem;
+    min-width: 2.4rem;
     height: 2.4rem;
     transition: background-color 200ms cubic-bezier(0.260, 0.050, 0.250, 1.000); /* custom */
     z-index: 10;
@@ -417,7 +423,7 @@ button p{
     background-color: #181a1b;
     position:absolute;
     transition: background-color 150ms cubic-bezier(0.260, 0.050, 0.250, 1.000); /* custom */
-    z-index: 3;
+    z-index: 999;
 
     /* box-shadow: 0 0 20px black */
 }
@@ -529,6 +535,7 @@ hr{
 
 .vr{
     width:1px;
+    min-width:1px;
     margin: 0 0.5rem 0 0.5rem;
     background-color: rgba(255, 255, 255, 0.062);
     z-index: 10;
